force-app/main/default/objects/Warranty_Plan__c/Warranty_Plan__c.object-meta.xml
<CustomObject>
    <description>Defines warranty coverage policies that can be attached to laptop products and customer assets.</description>
    <label>Warranty Plan</label>
    <nameField>
        <label>Warranty Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warranty Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>