force-app/main/default/objects/Warranty_Plan__c/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Accidental Damage</fullName>
            </value>
            <value>
                <fullName>Battery Only</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>