force-app/main/default/objects/Warranty_Plan__c/fields/Covered_Components__c.field-meta.xml
<CustomField>
    <fullName>Covered_Components__c</fullName>
    <label>Covered Components</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>