force-app/main/default/objects/Warranty_Plan__c/fields/Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Exclusions__c</fullName>
    <label>Exclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>