force-app/main/default/objects/Warranty_Plan__c/fields/Max_Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Coverage_Amount__c</fullName>
    <label>Max Coverage Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>