force-app/main/default/objects/Warranty_Plan__c/fields/Requires_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Requires_Receipt__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Receipt</label>
    <type>Checkbox</type>
</CustomField>